--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,15 +1,10 @@
-<div >
-	<div class="header">
-    <h3>mybook</h3>
-	</div>
 
-	<div class="loginFields" ng-controller = "LoginCtrl">
+
+<div class="loginFields" ng-controller = "LoginCtrl">
 		<form name="loginForm">
-			<input type="text" ng-model="loginUsrName" class = "userFields" id = "username" placeholder = "User name"><br> <br>
-			<input type="password" ng-model="loginUsrPwd" class = "userFields" id = "password" placeholder = "password"> <br> <br>
-			<img src="images/log_in.png" alt="Sign-In" 
-				 ng-click = "loginUser()">	<br><br><br>
-				 {{awesomeThings}}
+			<input type="text" ng-model="loginUsrName" class = "userFields" id = "username" placeholder = "User name">
+			<input type="password" ng-model="loginUsrPwd" class = "userFields" id = "password" placeholder = "password">
+			<!-- <img src="images/log_in.png" alt="Sign-In" ng-click = "loginUser()"> -->
+			<button class="defaultBtn" ng-click = "loginUser()">Sign In</button>
 		</form>
-	</div>	
-</div>
+</div>	
