--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -3,8 +3,41 @@
 						<button class="defaultBtn" ng-click = "defaultCurrentViewTo('feedsView')">Feed</button>
 						<button class="defaultBtn" ng-click = "defaultCurrentViewTo('profileView')">Profile</button>
 					</div>
-					<div id="profilePage">
-						<h4> Welcome {{$scope.userName}}!!!</h4>
-						<p>Profile Page</p>
-					</div>
+
+						<div id="profilePage">
+							<h4> Welcome {{userName}}!!!</h4>
+						</div>
+							
+							<table>
+								<tr>
+									<td><div class = "userIcon"></div></td>
+									<td>
+										<table>
+											<tr>
+												<td><div class = "userIcon"></div></td>
+												<td>
+													<table>
+														<tr><td>*<input id = "Profilename" type="text" name="f"  placeholder="Name" align = "center"></td></tr>
+														<tr><td>*<input id = "age" type="text" name="f"  placeholder="Age" align = "center" onkeypress='validateNumber(event)'></td><tr>
+														<tr><td>*<input id = "phone" type="text" name="f"  placeholder="Phone" align = "center" onkeypress='validateNumber(event)'></td><tr>
+														<tr><td>*<input id = "email" type="text" name="f"  placeholder="Email" align = "center"></td><tr>
+														<tr><td><textarea id = "address" rows="4" placeholder="Address"></textarea></td><tr>
+														<tr><td><input id = "fileName" type="text" name="f"  placeholder="Profile Image" align = "center"></td>
+														<td><input type="file" name="p"  value="Select" id="profileImage" style="display: none;"  onchange="handleFiles();">
+														<input type="button" value="Browse..." onclick="document.getElementById('profileImage').click();" />
+														</td></tr>								
+
+														<tr></tr><tr></tr>
+														<tr><td></td><td><input type="button" name="p"  value="Save" onclick="saveProfile();"></td></tr>
+													</table>
+												</td>
+												<td>
+													<img id="preview" src="" width="152px" height="229px"></img>
+												</td>
+												<td> <td><div class = "userIcon"></div></td></td>
+											</tr>
+										</table>
+									</td>
+								</tr>
+							</table>
 				</div>
