--- a/app/views/login.html
+++ b/app/views/login.html
@@ -8,5 +8,5 @@
 		</form>
 </div>	
 <div>
-	<img ng-src="images/view1.jpg" class="imgDimensions" width="700px" height="508px">
+	<img ng-src="images/view.jpg" class="imgDimensions" width="700px" height="508px">
 </div>
