--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -124,6 +124,7 @@ button.defaultBtn {
     padding-left: 10px;
     border-style: dotted;
     border-width: 3px;
+    background-color: #EEEED2;
 }
 
 .usrimgSize{
@@ -132,6 +133,8 @@ button.defaultBtn {
 .usrDelImg{
   width: 45px;
   float: right;
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
 
 .feedValues{
